--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,6 @@ classifiers = [
 [project.urls]
 "Homepage" = "https://github.com/FredHutch/widgets"
 "Bug Tracker" = "https://github.com/FredHutch/widgets/issues"
+
+[project.scripts]
+widgets = "widgets:cli.main.main"
