Code is in src/

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Run lint
         run: |
-          flake8 widgets
+          flake8 src
 
       - name: Run Tests
         working-directory: tests
