--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Test install
         run: |
-          python -m build
+          pip install .
           widgets
 
       - name: Build python package
