--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -25,14 +25,14 @@ jobs:
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest pytest-cov
+          pip install flake8 pytest pytest-cov plotly
           pip install .
+          python -c "import widgets"
 
       - name: Run lint
         run: |
           flake8 src
 
       - name: Run Tests
-        working-directory: tests
         run: |
           pytest --cov-report term-missing --cov=widgets
