Try using distinct filename

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -36,4 +36,4 @@ jobs:
       - name: Run Tests
         run: |
           pytest --cov-report term-missing --cov=widgets
-          coverage-badge -o badge.svg
+          coverage-badge -o coverage.svg
