--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest pytest-cov plotly
+          pip install flake8 pytest pytest-cov plotly coverage
           pip install .
           python -c "import widgets"
 
@@ -36,3 +36,10 @@ jobs:
       - name: Run Tests
         run: |
           pytest --cov-report term-missing --cov=widgets
+          coverage xml
+
+      - name: Get test coverage
+        uses: orgoro/coverage@v3
+        with:
+            coverageFile: coverage.xml
+            token: ${{ secrets.GITHUB_TOKEN }}
