--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -39,6 +39,7 @@ jobs:
           coverage xml
 
       - name: Get test coverage
+        if: github.event_name == 'pull_request'
         uses: orgoro/coverage@v3
         with:
             coverageFile: coverage.xml
